<resources>
    <string name="app_name">Re-Chances</string>

    <string-array name="title">
        <item> Kimono Bekas</item>
        <item> Buku Preloved</item>
        <item> Lampu Tidur</item>
        <item> Tanaman Hias</item>
        <item> Kamera Canon</item>
        <item> Lightstick</item>
        <item> Kulkas</item>
        <item> Kursi Mini</item>
        <item> Jam Dinding</item>
        <item> Kipas</item>
    </string-array>

    <string-array name="status">
        <item> Gratis Ongkir</item>
        <item> Ambil Ke Tempat</item>
    </string-array>

    <string-array name="tags">
        <item> smsms</item>
    </string-array>

    <string-array name="price">
        <item> 100000</item>
    </string-array>

    <string-array name="image">
        <item>mmam</item>
    </string-array>

    <string name="re_chances">Re-Chances</string>
    <string name="headline">Lorem ipsum dolor sit amet, consectetur adipiscing.</string>
    <string name="skip">Skip</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="title_activity_login_tes">LoginTesActivity</string>
    <string name="text_user_name">Enter your full name here</string>
    <string name="plants">Plants</string>
    <string name="decoration">Decoration</string>
    <string name="fake_palm_leaf_plant">Fake Palm Leaf Plant</string>
    <string name="rp_35_000">Rp 35.000</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac tincidunt vitae semper quis.</string>
    <string name="_1">1</string>
    <string name="take">Take</string>
    <string name="_15sp">15sp</string>
    <string name="back">Back</string>
    <string name="your_full_name_please">Your full name, please?</string>
    <string name="email">E-mail</string>
    <string name="enter_your_email_here">Enter your email here</string>
    <string name="enter_your_magic_spell_here">Enter your magic spell</string>
    <string name="password">Password</string>
    <string name="sign_up_with">Sign Up with</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_key">AIzaSyCVaN-vPq9z5avtbNOHOPBn7lM8HoI8MeM</string>
    <string name="hi_user">Hi, User</string>
    <string name="what_are_you_looking_for_today">What are you looking for today?</string>
    <string name="find_goods_by_your_desire">Find goods by your desire…</string>
    <string name="plant">Plant</string>
    <string name="based_on_your_interests">Based on Your Interests</string>
    <string name="view_all"><![CDATA[View All >]]></string>
    <string name="home">Home</string>
    <string name="list_items">List Items</string>
    <string name="post">Post</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="switch_theme">Switch Theme</string>
    <string name="contact_us">Contact Us</string>
    <string name="settings">Settings</string>
    <string name="helps_faqs"><![CDATA[Helps & FAQs]]></string>
    <string name="user_s_name_here">User\'s Name Here</string>
    <string name="rechances_gmail_com">rechances@gmail.com</string>
    <string name="user_names">User Names</string>
    <string name="_01_01_2021_10_00_am">01/01/2021 10:00 AM</string>
    <string name="search">Search</string>
    <string name="tanaman_hias">Tanaman Hias</string>
    <string name="thrift">Thrift</string>
    <string name="buku_bekas">Buku Bekas</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="books">BOOKS</string>
    <string name="preloved">PRELOVED</string>
    <string name="good_condition">GOOD CONDITION</string>
    <string name="your_items_for_offer">Your Items for Offer</string>
    <string name="to_offer">To Offer</string>
    <string name="unavailable">Unavailable</string>
    <string name="_2_items">2 Items</string>
    <string name="drawer">Drawer</string>
    <string name="condition_type">Condition/Type</string>
    <string name="type_of_porterage">Type of Porterage</string>
    <string name="preloved_2">Preloved</string>
    <string name="free_shipping">Free Shipping</string>
    <string name="customer_sekian">Customer Sekian</string>
    <string name="type_message">Type message…</string>
    <string name="sender_s_bubble_on_left">Sender\'s Bubble on left</string>
    <string name="_1_items" />
    <string name="_1_itemss">1 Items</string>
    <string name="user_full_name">User Full Name</string>
    <string name="username">Username</string>
    <string name="uname">\@your_username</string>
    <string name="text_search_user_here">Search here…</string>
    <string name="notification">Notification</string>
    <string name="push_e_mail_mute">Push, E-mail, Mute</string>
    <string name="privacy">Privacy</string>
    <string name="log_out">Log Out</string>
    <string name="sign_in_tv">Sign Up here</string>
    <string name="reccomendations">Reccomendations</string>
</resources>