<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_switch_theme"
            android:icon="@drawable/icon_switch_mode"
            android:title="@string/switch_theme" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/icon_contact_us"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/icon_setting"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_helps"
            android:icon="@drawable/icon_info"
            android:title="@string/helps_faqs" />

    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/icon_logout"
            android:title="@string/log_out" />

    </group>

</menu>
