<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cnb_unselectedColor="#D3D1D8">

    <item
        android:id="@+id/home_page"
        android:icon="@drawable/icon_home"
        android:title="@string/home"
        app:cnb_iconColor="@color/purple" />

    <item
        android:id="@+id/list_item_page"
        android:icon="@drawable/icon_list"
        android:title="@string/list_items"
        app:cnb_iconColor="@color/purple" />

    <item
        android:id="@+id/post_page"
        android:icon="@drawable/icon_add"
        android:title="@string/post"
        app:cnb_iconColor="@color/purple" />

    <item
        android:id="@+id/chat_page"
        android:icon="@drawable/icon_chat"
        android:title="@string/messages"
        app:cnb_iconColor="@color/purple" />

    <item
        android:id="@+id/profile_page"
        android:icon="@drawable/icon_profile"
        android:title="@string/profile"
        app:cnb_iconColor="@color/purple" />

</menu>