<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="5dp"
    app:cardCornerRadius="18.21dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_20sdp">

        <ImageView
            android:id="@+id/display_pict_item"
            android:layout_width="134dp"
            android:layout_height="136dp"
            android:src="@drawable/drawer_display"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/total_item"
            android:layout_width="119dp"
            android:layout_height="21dp"
            android:layout_marginEnd="128dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/_2_items"
            android:textColor="#9796A1"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/display_pict_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/display_pict_item"
            app:layout_constraintVertical_bias="0.226" />

        <TextView
            android:id="@+id/title_item_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/drawer"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/total_item"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/total_item"
            app:layout_constraintTop_toBottomOf="@+id/total_item" />

        <Button
            android:id="@+id/button_see_detail"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/button_rect"
            app:layout_constraintBottom_toBottomOf="@+id/title_item_display"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/total_item"
            app:layout_constraintVertical_bias="0.533" />

        <TextView
            android:id="@+id/condition_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/condition_type"
            android:textColor="#9796A1"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/display_pict_item"
            app:layout_constraintTop_toBottomOf="@+id/display_pict_item"
            app:layout_constraintVertical_bias="0.812" />

        <TextView
            android:id="@+id/Type_of_Porterage"
            android:layout_width="137dp"
            android:layout_height="24dp"
            android:layout_marginStart="84dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/type_of_porterage"
            android:textColor="#9796A1"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/condition_type"
            app:layout_constraintStart_toEndOf="@+id/condition_type"
            app:layout_constraintTop_toTopOf="@+id/condition_type"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/condition_type_2"
            android:layout_width="130dp"
            android:layout_height="26dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/preloved_2"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="@+id/condition_type"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/condition_type"
            app:layout_constraintTop_toBottomOf="@+id/condition_type" />

        <TextView
            android:id="@+id/Type_of_Porterage_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/free_shipping"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/condition_type_2"
            app:layout_constraintStart_toEndOf="@+id/condition_type_2"
            app:layout_constraintTop_toTopOf="@+id/condition_type_2"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
