<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_two"
    tools:context=".activity.ProductDetailActivity">

    <ImageView
        android:id="@+id/icon_back_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <ImageView
        android:id="@+id/icon_menu_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_more" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_field"
        android:layout_width="0dp"
        android:layout_height="450dp"
        android:background="@drawable/detail_page_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/categories_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/ic_cat_bg"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/plants"
            android:textColor="@android:color/background_dark"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/categories_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/ic_cat_bg"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/decoration"
            android:textColor="@android:color/background_dark"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/categories_1"
            app:layout_constraintStart_toEndOf="@+id/categories_1"
            app:layout_constraintTop_toTopOf="@+id/categories_1" />

        <TextView
            android:id="@+id/categories_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/ic_cat_bg"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/thrift"
            android:textColor="@android:color/background_dark"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/categories_2"
            app:layout_constraintStart_toEndOf="@+id/categories_2"
            app:layout_constraintTop_toTopOf="@+id/categories_2"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/product_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/fake_palm_leaf_plant"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/product_price"
            app:layout_constraintStart_toStartOf="@+id/categories_1"
            app:layout_constraintTop_toBottomOf="@+id/categories_1" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/rp_35_000"
            android:textColor="#4C4EB9"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/product_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/product_title" />

        <TextView
            android:id="@+id/detail_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_medium"
            android:lineSpacingExtra="2dp"
            android:text="@string/lorem_ipsum"
            android:textColor="@android:color/background_dark"
            app:layout_constraintEnd_toEndOf="@+id/product_price"
            app:layout_constraintStart_toStartOf="@+id/product_title"
            app:layout_constraintTop_toBottomOf="@+id/product_title" />

        <ImageView
            android:id="@+id/lessen_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/detail_product"
            app:layout_constraintTop_toTopOf="@+id/take_button"
            app:srcCompat="@drawable/ic_minus" />

        <TextView
            android:id="@+id/total_quantity"
            android:layout_width="50dp"
            android:layout_height="53dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/_1"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/lessen_quantity"
            app:layout_constraintStart_toEndOf="@+id/lessen_quantity"
            app:layout_constraintTop_toTopOf="@+id/lessen_quantity"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/add_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/total_quantity"
            app:layout_constraintStart_toEndOf="@+id/total_quantity"
            app:layout_constraintTop_toTopOf="@+id/total_quantity"
            app:srcCompat="@drawable/ic_plus" />

        <Button
            android:id="@+id/take_button"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:background="@drawable/detail_page_cart_button_bg"
            android:fontFamily="@font/poppins_medium"
            android:padding="16dp"
            android:paddingEnd="16dp"
            android:text="@string/take"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/image_detail_product"
        android:layout_width="277dp"
        android:layout_height="479dp"
        android:layout_marginBottom="256dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:transitionName="image"
        app:layout_constraintBottom_toBottomOf="@+id/detail_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/dummy_img" />

</androidx.constraintlayout.widget.ConstraintLayout>