<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnBoarding3">

    <TextView
        android:id="@+id/back_2"
        android:layout_width="117dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/back"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/skipText_3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="335dp"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center_horizontal|top"
        android:text="@string/skip"
        android:textAppearance="@style/skip"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/background_white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:src="@drawable/shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/illust_3"
        android:layout_width="513.2dp"
        android:layout_height="513.2dp"
        android:src="@drawable/illust_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="-26dp" />

    <TextView
        android:id="@+id/headline_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="216dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/headline"
        android:textColor="#000000"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/subText_3"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="144dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/headline"
        android:textColor="#B1B1B1"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/button_next_3"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/pb3"
        android:text="@string/_15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>